--- a/Tue_03_MIPS/Stall_Control_Block/stall_control_block_summary.html
+++ b/Tue_03_MIPS/Stall_Control_Block/stall_control_block_summary.html
@@ -72,9 +72,9 @@
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/patel/Desktop/Arpit/co_lab/co_lab/Tue_03_MIPS/Stall_Control_Block\isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>Thu 5. Sep 19:23:57 2019</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/patel/Desktop/Arpit/co_lab/co_lab/Tue_03_MIPS/Stall_Control_Block\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Thu 5. Sep 23:33:13 2019</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 09/05/2019 - 19:26:27</center>
+<br><center><b>Date Generated:</b> 09/05/2019 - 23:40:40</center>
 </BODY></HTML>
