--- a/Tue_03_MIPS/JC_block/JC_block_summary.html
+++ b/Tue_03_MIPS/JC_block/JC_block_summary.html
@@ -72,9 +72,9 @@
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/patel/Desktop/Arpit/co_lab/co_lab/lab_5/JC_block\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Tue 10. Sep 03:01:23 2019</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/student/Desktop/co_lab/co_lab/Tue_03_MIPS/JC_block\isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>Tue Sep 10 14:54:27 2019</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 09/10/2019 - 03:05:27</center>
+<br><center><b>Date Generated:</b> 09/10/2019 - 15:08:22</center>
 </BODY></HTML>
