--- a/Tue_03_MIPS/Tue_03_MIPS/MIPS_envsettings.html
+++ b/Tue_03_MIPS/Tue_03_MIPS/MIPS_envsettings.html
@@ -22,35 +22,35 @@
 </tr>
 <tr>
 <td>Path</td>
-<td>C:\Xilinx\14.7\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\..\..\..\DocNav;<br>C:\Xilinx\14.7\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnuwin\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\arm\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;<br>C:\Xilinx\14.7\ISE_DS\common\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\common\lib\nt64;<br>C:\ProgramData\Oracle\Java\javapath;<br>C:\Program Files (x86)\Intel\iCLS Client\;<br>C:\Program Files\Intel\iCLS Client\;<br>C:\Windows\system32;<br>C:\Windows;<br>C:\Windows\System32\Wbem;<br>C:\Windows\System32\WindowsPowerShell\v1.0\;<br>C:\Program Files\Intel\Intel(R) Management Engine Components\DAL;<br>C:\Program Files\Intel\Intel(R) Management Engine Components\IPT;<br>C:\Program Files (x86)\Intel\Intel(R) Management Engine Components\DAL;<br>C:\Program Files (x86)\Intel\Intel(R) Management Engine Components\IPT;<br>C:\Program Files\MATLAB\R2018b\runtime\win64;<br>C:\Program Files\MATLAB\R2018b\bin;<br>C:\Users\student\AppData\Local\Programs\Git\cmd</td>
+<td>D:\Software\Xilinx\14.7\ISE_DS\ISE\\lib\nt64;<br>D:\Software\Xilinx\14.7\ISE_DS\ISE\\bin\nt64;<br>D:\Software\Xilinx\14.7\ISE_DS\ISE\bin\nt64;<br>D:\Software\Xilinx\14.7\ISE_DS\ISE\lib\nt64;<br>D:\Software\Xilinx\14.7\ISE_DS\ISE\..\..\..\DocNav;<br>D:\Software\Xilinx\14.7\ISE_DS\PlanAhead\bin;<br>D:\Software\Xilinx\14.7\ISE_DS\EDK\bin\nt64;<br>D:\Software\Xilinx\14.7\ISE_DS\EDK\lib\nt64;<br>D:\Software\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\nt\bin;<br>D:\Software\Xilinx\14.7\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;<br>D:\Software\Xilinx\14.7\ISE_DS\EDK\gnuwin\bin;<br>D:\Software\Xilinx\14.7\ISE_DS\EDK\gnu\arm\nt\bin;<br>D:\Software\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;<br>D:\Software\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;<br>D:\Software\Xilinx\14.7\ISE_DS\common\bin\nt64;<br>D:\Software\Xilinx\14.7\ISE_DS\common\lib\nt64;<br>C:\Program Files (x86)\Common Files\Oracle\Java\javapath;<br>C:\MinGW\bin;<br>C:\Program Files (x86)\GnuWin32\bin;<br>C:\Program Files\AdoptOpenJDK\jdk-11.0.3.7-hotspot\bin;<br>C:\Windows\system32;<br>C:\Windows;<br>C:\Windows\System32\Wbem;<br>C:\Windows\System32\WindowsPowerShell\v1.0\;<br>C:\Windows\System32\OpenSSH\;<br>C:\Program Files (x86)\NVIDIA Corporation\PhysX\Common;<br>C:\Program Files\NVIDIA Corporation\NVIDIA NvDLISR;<br>C:\Program Files\Git\cmd;<br>C:\Program Files\PuTTY\;<br>C:\Program Files\nodejs\;<br>C:\ProgramData\chocolatey\bin;<br>C:\Program Files\gnuplot\bin;<br>C:\Users\patel\AppData\Local\Programs\Python\Python38-32\Scripts\;<br>C:\Users\patel\AppData\Local\Programs\Python\Python38-32\;<br>C:\Users\patel\AppData\Local\Programs\Microsoft VS Code\bin;<br>C:\Users\patel\AppData\Local\Microsoft\WindowsApps;<br>C:\Program Files (x86)\Nmap;<br>C:\Users\patel\AppData\Roaming\npm</td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>XILINX</td>
-<td>C:\Xilinx\14.7\ISE_DS\ISE\</td>
+<td>D:\Software\Xilinx\14.7\ISE_DS\ISE\</td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>XILINX_DSP</td>
-<td>C:\Xilinx\14.7\ISE_DS\ISE</td>
+<td>D:\Software\Xilinx\14.7\ISE_DS\ISE</td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>XILINX_EDK</td>
-<td>C:\Xilinx\14.7\ISE_DS\EDK</td>
+<td>D:\Software\Xilinx\14.7\ISE_DS\EDK</td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>XILINX_PLANAHEAD</td>
-<td>C:\Xilinx\14.7\ISE_DS\PlanAhead</td>
+<td>D:\Software\Xilinx\14.7\ISE_DS\PlanAhead</td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
@@ -364,14 +364,14 @@
 </tr>
 <tr>
 <td>CPU Architecture/Speed</td>
-<td>Intel(R) Core(TM) i7-4790 CPU @ 3.60GHz/3592 MHz</td>
+<td>Intel(R) Core(TM) i7-9750H CPU @ 2.60GHz/2592 MHz</td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>Host</td>
-<td>AU-SEAS-L117-02</td>
+<td>LAPTOP-CTS4P9NC</td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
